# hydrant

./: .editorconfig  .env  .env.development  .gitignore  .parcelrc  .prettierignore  LICENSE.txt  README.md  deploy.sh  eslint.config.js  eslint.config.ts  index.html  package-lock.json  package.json  parse_timeslot_test.py  pyproject.toml  react-router.config.ts  requirements-dev.txt  requirements.txt  tsconfig.app.json  tsconfig.json  tsconfig.server.json  vite.config.ts
.github/: dependabot.yaml
.github/workflows/: README.md  autodeploy.yml  black.yml  ci-backend.yml  ci-frontend.yml  ci.yml  eslint.yml  gh-pages.yml  pages.yml  prettier.yml  scripts.yml
deploy/: README.md  pm2.config.js
new_scripts/: all_classes  combiner_ws.py  constants.py  fireroadws.py  missing  update_schedule.sh  ws_froad
overrides/: index.html
pe/: s26-h1pe-orig.csv  s26-h1pe.csv
public/: .htaccess  f22.json  f23.json  f24.json  f25.json  full.json  i25.json  i26.json  index.html  latest.json  latestTerm.json  m25.json  s23.json  s24.json  s25.json  s26.json  schema.py
scrapers/: .pylintrc  README.md  __main__.py  catalog.py  cim.py  coursews.py  eecs_special_subjects.py  fireroad.py  hydrant_schema.json  locations.py  math_dept.py  overrides.json  overrides.toml  package.py  pe.py  text_mining.py  update.py  utils.py
scripts/: parcel-dev-reporter.js
src/: entry.client.tsx  entry.server.tsx  index.html  index.tsx  main.tsx  overrides.tsx  privacy.html  root.tsx  routes.ts  vite-env.d.ts
src-server/: index.ts  parcel.d.ts  server.ts
src/lib/: pe.ts  (+20 more)
test/: activity.test.ts  class.test.ts  colors.test.ts  dates.test.ts  utils.test.ts
tests/: activity.test.ts  class.test.ts  colors.test.ts  dates.test.ts  state.test.ts  store.test.ts  utils.test.ts
(+143 files in other folders)
